Added external link functionality to hero and list of links paragraphs.

--- a/templates/paragraphs/paragraph--hero.html.twig
+++ b/templates/paragraphs/paragraph--hero.html.twig
@@ -85,10 +85,20 @@
               {% for key, item in content.field_hero_link if key|first != '#' %}
                 {% set link = item['#url'] %}
                 {% set text = item['#title'] %}
-                <a href="{{ link }}" class="hero__button hds-button {% if link_type %}{{ 'hds-button--' ~ link_type }}{% endif %}">
+                {% set target_new = item['#options']['target_new'] %}
+
+                <a href="{{ link }}" {% if target_new %}target="_blank"{% endif %} class="hero__button hds-button {% if link_type %}{{ 'hds-button--' ~ link_type }}{% endif %}">
                   {% if icon_first == true %}<span aria-hidden="true" class="hds-icon {{ 'hds-icon--' ~ icon_first_type }}"></span>{% endif %}
                   <span class="hds-button__label">{{ text }}</span>
-                  {% if link_type == 'supplementary' %}<span aria-hidden="true" class="hds-icon hds-icon--arrow-right"></span>{% endif %}
+                  {% if link_type == 'supplementary' %}
+                    {% if target_new %}
+                      <span aria-hidden="true" class="hds-icon hds-icon--link-external"></span>
+                    {% else %}
+                      <span aria-hidden="true" class="hds-icon hds-icon--arrow-right"></span>
+                    {% endif %}
+                  {% elseif target_new %}
+                    <span aria-hidden="true" class="hds-icon hds-icon--link-external"></span>
+                  {% endif %}
                 </a>
               {% endfor %}
             </div>
