--- a/templates/paragraphs/paragraph--list-of-links-item.html.twig
+++ b/templates/paragraphs/paragraph--list-of-links-item.html.twig
@@ -45,6 +45,7 @@
 %}
 
 {% set url = content.field_list_of_links_link.0['#url'] %}
+{% set target_new = content.field_list_of_links_link.0['#options']['target_new'] %}
 {% set text = content.field_list_of_links_link.0['#title'] %}
 {% set image = content.field_list_of_links_image %}
 {% set desc = content.field_list_of_links_desc.0 %}
@@ -53,7 +54,7 @@
   <div{{ attributes.addClass(classes) }}>
     {% block content %}
 
-    <a href="{{ url }}" class="list-of-links__item__link">
+    <a href="{{ url }}" {% if target_new %}target="_blank"{% endif %} class="list-of-links__item__link">
       {% if list_of_links_design == 'with-image' %}
         {% if image.0 %}
           <div class="list-of-links__item__image">
@@ -71,7 +72,7 @@
           <div class="list-of-links__item__desc">{{ desc }}</div>
         {% endif %}
       {% endif %}
-      <span class="list-of-links__item__arrow">
+      <span class="list-of-links__item__arrow{% if target_new %} is-outbound{% endif %}">
         {% include '@hdbt/misc/icon.twig' with {icon: 'arrow-right', label: 'Test label for the icon'|t } %}
       </span>
     </a>
