UHF-922 Revert changes to hdbt theme

--- a/src/scss/components/content/_article.scss
+++ b/src/scss/components/content/_article.scss
@@ -1,6 +1,5 @@
 .page-type--article {
-  .node-type--article,
-  .diff-responsive-table-wrapper {
+  .node-type--article {
     .article-header__container {
       margin-bottom: $spacing-double;
 
