--- a/src/scss/components/paragraphs/_accordion.scss
+++ b/src/scss/components/paragraphs/_accordion.scss
@@ -52,21 +52,41 @@
   .accordion-item__button {
     background: transparent;
     border: none;
+    display: flex;
     margin: 0;
     padding: 0;
     text-align: left;
   }
 
+  .accordion-item__icon {
+    display: inline-flex;
+    margin-right: $spacing;
+    margin-top: -2px; // Icon has safe boundaries which breaks alignment.
+
+    @include breakpoint($breakpoint-l) {
+      margin-right: $spacing-and-half;
+      margin-top: -3px; // Icon has safe boundaries which breaks alignment.
+    }
+
+    .icon {
+      --icon-proportions: 2.2rem;
+
+      @include breakpoint($breakpoint-l) {
+        --icon-proportions: 3rem;
+      }
+    }
+  }
+
   .accordion-item__button--toggle {
     @include font-size(24px, 28px);
     border: none;
-    padding: $spacing-and-half 50px $spacing-and-half 0;
+    padding: $spacing-and-half 60px $spacing-and-half 0;
     position: relative;
     width: 100%;
 
     @include breakpoint($breakpoint-l) {
       @include font-size(36px, 43px);
-      padding: $spacing-double 50px $spacing-double 0;
+      padding: $spacing-double 60px $spacing-double 0;
     }
 
     &::after {
