--- a/templates/content/node--landing-page--teaser.html.twig
+++ b/templates/content/node--landing-page--teaser.html.twig
@@ -75,6 +75,7 @@
 
 {%
   set classes = [
+    'content-card',
     'content-card--' ~ node.bundle|clean_class,
     node.isPromoted() ? 'content-card--promoted',
     node.isSticky() ? 'content-card--sticky',
@@ -83,20 +84,31 @@
   ]
 %}
 
+{%
+  set title_classes = [
+    'content-card__title'
+  ]
+%}
+
 <article{{ attributes.addClass(classes) }}>
 
-  <div class="content-card__image">
-    {% if image.0 %}
-      {{ image }}
-    {% else %}
-      {% include '@hdbt/media/image--card.html.twig' with {content: '' } %}
-    {% endif %}
-  </div>
+  <a href="{{ url }}" class="content-card__link" rel="bookmark">
+    <div class="content-card__image">
+      {% if image.0 %}
+        {{ image }}
+      {% else %}
+        {% include '@hdbt/media/image--card.html.twig' with {content: '' } %}
+      {% endif %}
+    </div>
 
-  {{ title_prefix }}
-  <h2{{ title_attributes }}>
-    <a href="{{ url }}" rel="bookmark">{{ label }}</a>
-  </h2>
-  {{ title_suffix }}
+    {{ title_prefix }}
+    <h3{{ title_attributes.addClass(title_classes) }}>
+      {{ label }}
+    </h3>
+    {{ title_suffix }}
+    <span class="content-card__arrow{% if target_new %} is-outbound{% endif %}">
+      {% include '@hdbt/misc/icon.twig' with {icon: 'arrow-right', label: 'Test label for the icon'|t } %}
+    </span>
+  </a>
 
 </article>
