UHF-1070: Change the footer color to correct variant

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -134,11 +134,11 @@
 
 // Footer color-schemes
 .footer--light {
-  background-color: $hdbt-color-white;
+  background-color: $color-silver-medium-light;
   color: $color-white;
 
   .hds-koros {
-    color: $hdbt-color-white;
+    color: $color-silver-medium-light;
   }
 
   a {
