--- a/src/scss/components/content/_article.scss
+++ b/src/scss/components/content/_article.scss
@@ -1,5 +1,5 @@
 .page-type--article {
-  .node-type--article {
+  .node--type-article {
     .article-header__container {
       margin-bottom: $spacing-double;
 
@@ -68,7 +68,7 @@
           padding-bottom: $spacing-quadruple + $footer-koro-height;
         }
       }
-      
+
       .keywords__wrapper {
         margin-left: -#{$spacing-quarter};
         margin-right: -#{$spacing-quarter};
