--- a/templates/content/node--unit.html.twig
+++ b/templates/content/node--unit.html.twig
@@ -73,55 +73,45 @@
 
 {%
   set classes = [
-  'node--type-' ~ node.bundle|clean_class,
-  node.isPromoted() ? 'node--promoted',
-  node.isSticky() ? 'node--sticky',
-  not node.isPublished() ? 'node--unpublished',
-  view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
-]
+    'node--type-' ~ node.bundle|clean_class,
+    node.isPromoted() ? 'node--promoted',
+    node.isSticky() ? 'node--sticky',
+    not node.isPublished() ? 'node--unpublished',
+    view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
+  ]
 %}
 
 <article{{ attributes.addClass(classes) }}>
   {% embed "@hdbt/misc/container.twig" with {container_element: node.bundle|clean_class ~ '_header'} %}
     {% block container_content %}
-      {% if content.field_lead|render %}
-        <div class="{{ node.bundle|clean_class }}__lead">
-          {{ content.field_lead }}
-        </div>
-      {% endif %}
+      {{ title_prefix }}
+      <h1{{ title_attributes.addClass('unit__title') }}>{{ content.field_unit_visible_title }}</h1>
+      {{ title_suffix }}
 
-      {{ drupal_block('hdbt_content_social_sharing_block') }}
+      <div{{ content_attributes.addClass('unit__header') }}>
+        {% if content.field_unit_short_description|render %}
+          <div class="unit__short-desc">
+            {{ content.field_unit_short_description }}
+          </div>
+        {% endif %}
+        {# {% if content.field_unit_main_image_url|render %}
+          <div class="unit__image">
+            {{ content.field_unit_main_image_url }}
+          </div>
+        {% endif %} #}
+        {% if content.field_unit_alternative_image|render %}
+          <div class="unit__image">
+            {{ content.field_unit_alternative_image }}
+          </div>
+        {% endif %}
+        {% if content.field_unit_long_description|render %}
+          <div class="unit__long-desc">
+            {{ content.field_unit_long_description }}
+          </div>
+        {% endif %}
 
-      {% if content.field_author|render %}
-        <div class="{{ node.bundle|clean_class }}__author">
-          {{ content.field_author }}
-        </div>
-      {% endif %}
-
-      {% set created_date = node.createdtime|format_date('medium') %}
-      {% if created_date|render %}
-        <div class="{{ node.bundle|clean_class }}__date">
-          {{ created_date }}
-        </div>
-      {% endif %}
+      </div>
     {% endblock container_content %}
   {% endembed %}
 
-  {% if content.field_content|render %}
-    <div class="{{ node.bundle|clean_class }}__content">
-      {{ content.field_content }}
-    </div>
-  {% endif %}
-
-  {% if content.field_keywords|render %}
-    <div class="{{ node.bundle|clean_class }}__keywords">
-      {% embed "@hdbt/misc/container.twig" with {container_element: 'keywords'} %}
-        {% block container_content %}
-          <div class="keywords__wrapper">
-            {{ content.field_keywords }}
-          </div>
-        {% endblock container_content %}
-      {% endembed %}
-    </div>
-  {% endif %}
 </article>
