UHF-1089: Style hero-for units that have parents and units that are parent units

--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -39,3 +39,13 @@
     }
   }
 }
+
+.node--type-unit--with-hero {
+  .unit__title {
+    margin-top: $spacing-double;
+  }
+
+  .container {
+    padding-top: 0;
+  }
+}
