--- a/src/scss/components/paragraphs/_hero.scss
+++ b/src/scss/components/paragraphs/_hero.scss
@@ -548,10 +548,14 @@ $koro-height: 50px;
   }
 
   .hero__image-container {
-    height: 300px;
+    height: 200px;
     line-height: 0;
     overflow: hidden;
     position: relative;
+
+    @include breakpoint($breakpoint-xs) {
+      height: 300px;
+    }
 
     img {
       height: 100%;
@@ -799,8 +803,12 @@ $koro-height: 50px;
   }
 
   .hero__image-container {
-    height: 300px;
+    height: 200px;
     position: relative;
+
+    @include breakpoint($breakpoint-xs) {
+      height: 300px;
+    }
 
     @include breakpoint($breakpoint-l) {
       bottom: 0;
