--- a/src/scss/components/content/_service.scss
+++ b/src/scss/components/content/_service.scss
@@ -5,20 +5,17 @@
 
   .service__short-desc {
     @include font-size(24px, 32px);
-    margin-bottom: $spacing-triple;
-    padding-bottom: $spacing-triple - $spacing-quarter;
+    padding-bottom: $spacing-half;
     position: relative;
+  }
 
-    &::after {
-      background-color: $color-black;
-      bottom: 0;
-      content: "";
-      display: block;
-      height: 2px;
-      left: 0;
-      position: absolute;
-      width: $spacing-quadruple;
-    }
+  .service__divider {
+    background-color: $color-black;
+    display: block;
+    height: 2px;
+    margin-bottom: $spacing-triple;
+    margin-top: $spacing-double;
+    width: $spacing-quadruple;
   }
 
   .service__long-desc {
