--- a/templates/field/field--field-unit-email.html.twig
+++ b/templates/field/field--field-unit-email.html.twig
@@ -36,6 +36,9 @@
  * @see template_preprocess_field()
  */
 #}
-{% for item in items %}
-  <a href="mailto:{{ unit_email_rendered_token }}">{{ unit_email_rendered_token }}</a>
-{% endfor %}
+{% if unit_email_rendered_token %}
+  <div class="unit__contact-row unit__contact-row--email">
+    <label class="unit__contact-row__label">{% include '@hdbt/misc/icon.twig' with {icon: 'envelope', label: 'E-mail'|t } %}{{ 'E-mail'|t }}:</label>
+    <a href="mailto:{{ unit_email_rendered_token }}">{{ unit_email_rendered_token }}</a>
+  </div>
+{% endif %}
