--- a/templates/field/field--field-unit-postal-address-tpr.html.twig
+++ b/templates/field/field--field-unit-postal-address-tpr.html.twig
@@ -36,6 +36,9 @@
  * @see template_preprocess_field()
  */
 #}
-{% for item in items %}
-  {{ unit_address_tpr_rendered_token|raw }}
-{% endfor %}
+{% if unit_postal_address_tpr_rendered_token %}
+  <div class="unit__contact-row unit__contact-row--postal-address">
+    <label class="unit__contact-row__label">{% include '@hdbt/misc/icon.twig' with {icon: 'location', label: 'Postal address'|t } %}{{ 'Postal address'|t }}:</label>
+    {{ unit_postal_address_tpr_rendered_token|raw }}
+  </div>
+{% endif %}
