--- a/templates/field/field--field-unit-short-description.html.twig
+++ b/templates/field/field--field-unit-short-description.html.twig
@@ -36,4 +36,8 @@
  * @see template_preprocess_field()
  */
 #}
-{{ unit_visible_title_rendered_token }}
+{% if unit_short_description_rendered_token %}
+  <div class="unit__short-desc">
+    {{ unit_short_description_rendered_token|raw }}
+  </div>
+{% endif %}
