Fix bg color leak on hero and its koro when there is no image on the design

--- a/src/scss/components/paragraphs/_hero.scss
+++ b/src/scss/components/paragraphs/_hero.scss
@@ -13,6 +13,12 @@ $koro-height: 50px;
     }
   }
 
+  .hds-koros {
+    svg {
+      margin-bottom: -1px;
+    }
+  }
+
   .hero__text-content {
     max-width: 690px;
   }
