--- a/templates/content/node--unit.html.twig
+++ b/templates/content/node--unit.html.twig
@@ -201,6 +201,11 @@
         </div>
 
       {% endif %}
+
+      {# If Service list exists, render it. #}
+      {% if content.service_list|render %}
+        {{ content.service_list }}
+      {% endif %}
     {% endblock container_content %}
   {% endembed %}
 
