UHF-1036: Added templates for the views.

--- a/templates/content/node--unit.html.twig
+++ b/templates/content/node--unit.html.twig
@@ -203,8 +203,8 @@
     {% endblock container_content %}
   {% endembed %}
 
-  {% if content.field_content|render %}
-    {{ content.field_content }}
+  {% if content.field_unit_service_list|render %}
+    {{ content.field_unit_service_list }}
   {% endif %}
 
 </article>
