UHF-1036: Minor changes to service list in unit content type.

--- a/templates/content/node--unit.html.twig
+++ b/templates/content/node--unit.html.twig
@@ -203,8 +203,8 @@
     {% endblock container_content %}
   {% endembed %}
 
-  {% if content.field_unit_service_list|render %}
-    {{ content.field_unit_service_list }}
+  {% if content.field_unit_services_list|render %}
+    {{ content.field_unit_services_list }}
   {% endif %}
 
 </article>
