--- a/templates/views/views-view-unformatted--services.html.twig
+++ b/templates/views/views-view-unformatted--services.html.twig
@@ -8,12 +8,5 @@
   <h3>{{ title }}</h3>
 {% endif %}
 {% for row in rows %}
-  {%
-    set row_classes = [
-      'listing--grid__item',
-    ]
-  %}
-  <div{{ row.attributes.addClass(row_classes) }}>
-    {{ row.content }}
-  </div>
+  {{- row.content -}}
 {% endfor %}
