UHF-1045: Added templates and configurations for units and services lists.

--- a/templates/content/node--service.html.twig
+++ b/templates/content/node--service.html.twig
@@ -120,4 +120,8 @@
     {% endblock container_content %}
   {% endembed %}
 
+  {% if content.field_service_units_list|render %}
+    {{ content.field_service_units_list }}
+  {% endif %}
+
 </article>
