--- a/src/scss/components/content/_service.scss
+++ b/src/scss/components/content/_service.scss
@@ -74,3 +74,71 @@ $teaser-icon-size: 48px;
     width: $teaser-icon-size;
   }
 }
+
+.node--type-service.node--view-mode-full {
+  .service__units:last-child {
+    // Make the keywords element go "under" the footer.
+    margin-bottom: calc(-1 * (#{$footer-koro-height} + #{$spacing-triple}));
+    padding-bottom: $spacing-double + $footer-koro-height;
+
+    @include breakpoint($breakpoint-l) {
+      padding-bottom: $spacing-quadruple + $footer-koro-height;
+    }
+  }
+}
+
+.service__units {
+  background-color: $color-black-5;
+  margin-top: $spacing-double;
+  overflow: hidden;
+  padding-bottom: $spacing-and-half;
+
+  .service__units__header {
+    display: block;
+  }
+
+  .service__units__count-container {
+    @include font-size(24px, 30px);
+    display: block;
+    margin-top: $spacing-double;
+    white-space: nowrap;
+
+    .service__units__count {
+      font-weight: 700;
+    }
+  }
+
+  .view--units {
+    margin-top: $spacing-and-half;
+  }
+
+  .service__units__pager {
+    list-style: none;
+    margin: $spacing-quadruple 0 0;
+    padding: 0;
+  }
+
+  .service__units__load-more-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
+    .hds-button {
+      --background-color: transparent;
+      --background-color-hover: var(--color-black-10);
+      --background-color-focus: transparent;
+      --background-color-hover-focus: var(--color-black-10);
+      --background-color-disabled: transparent;
+      --border-color: var(--hdbt-color-black);
+      --border-color-hover: var(--hdbt-color-black);
+      --border-color-focus: var(--hdbt-color-black);
+      --border-color-hover-focus: var(--hdbt-color-black);
+      --border-color-disabled: var(--hdbt-color-black);
+      --color: var(--hdbt-color-black);
+      --color-hover: var(--hdbt-color-black);
+      --color-focus: var(--hdbt-color-black);
+      --color-hover-focus: var(--hdbt-color-black);
+      --focus-outline-color: var(--hdbt-color-black);
+    }
+  }
+}
